<resources>
    <string name="app_name">GuideMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="appTitle">GuideMe</string>
    <string name="welcomeMsg">Hi, Welcome to GuideMe</string>
    <string name="WelcomeMsg2">Please Signin or Signup to use GuideMe</string>
    <string name="btnSignin">Sign In</string>
    <string name="btnSignup">Sign Up</string>
    <string name="loginTitle">Login</string>
    <string name="loginMsg">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emptyNameWarning">Insert Name</string>
    <string name="emptyEmailWarning">Insert Email</string>
    <string name="validEmailWarning">Insert Valid Email</string>
    <string name="emptyPasswordWarning">Insert Password</string>
    <string name="passwordWarning">Password must be more than 6 characters</string>
    <string name="signupTitle">Register</string>
    <string name="name">Name</string>
    <string name="image">image</string>
    <string name="popular_places">Popular places</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="scan_image">Scan Image</string>
    <string name="imgDesc">ImageDescription</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="clear_history">Clear History</string>
    <string name="history">History</string>
    <string name="related_article">Related Article</string>
</resources>